--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@ events:
   - question: What is IT Meet ?
     answer: ITMEET is an annual technological event organized by Kathmandu University Computer Club.
   - question: What is Hackathon?
-    answer: A hackathon is a focused 24-hour event where students, designer, entrepreneurs, programmers, and problem solver come together in small teams to share ideas and build something new and exciting, alongside a whole bunch of like-minded people. You learn immensely with the help of mentors, interact with companies and have fun! Hackathons are very beginner friendly
+    answer: A hackathon is a focused 24-hour event where students, designer, entrepreneurs, programmers, and problem solver come together in small teams to share ideas and build something new and exciting, alongside a whole bunch of like-minded people. You learn immensely with the help of mentors, interact with companies and have fun! Hackathons are very beginner friendly.
   - question: What is bootcamp?
     answer: Bootcamp will be the most intense educational experience of your life. You will form a team, work with trained coaches, and develop a venture/product or as specific bootcamp goal and  you can communicate with influence  in blended cultural immersion with academic rigor.
  
