--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 ---
-events:
+faq:
   - question: What is IT Meet ?
     answer: ITMEET is an annual technological event organized by Kathmandu University Computer Club.
   - question: What is Hackathon?
